--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ a{
         <div id="showcase">
             <div class="image">
                 <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" class="desktopImg" alt="Product image">
-                <img src="/product-preview-card-component-main/images/image-product-mobile.jpg" class="mobileImg" alt="Product image">
+                <img src="/product-preview-card-component-main/images/image-product-mobile.jpg" class="mobileImg" alt="">
             </div>
 
             <div class="texts">
