--- a/index.html
+++ b/index.html
@@ -5,186 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product View Card || Frontend Mentor</title>
-    <!-- <link rel="stylesheet" href="/product-preview-card-component-main/style.css"> -->
+    <link rel="stylesheet" href="/product-preview-card-component-main/style.css">
 </head>
-
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&family=Fraunces:wght@500;700&family=Montserrat:wght@500;700&family=Poppins:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&family=Fraunces:wght@500;700&family=Montserrat:wght@500;700&family=Poppins:wght@300;400;500;600;700&display=swap');
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Utility class */
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-:root{
-    --Dark-cyan: hsl(158, 36%, 37%);
-    --btnHover: hsl(158, 31%, 23%);
-    --Cream: hsl(30, 38%, 92%);
-    --Very-dark-blue: hsl(212, 21%, 14%);
-    --Dark-grayish-blue: hsl(228, 12%, 48%);
-    --White: hsl(0, 0%, 100%);
-    --fraunces: 'Fraunces', serif;
-    --montserrat: 'Montserrat', sans-serif;
-}
-
-.textPrimary{
-    color: var(--Dark-grayish-blue);
-    font-family: var(--montserrat);
-}
-
-
-
-
-/* Main code */
-
-#container {
-    width: 100%;
-    min-height: 100vh;
-    background-color: var(--Cream);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#showcase{
-    width: 100%;
-    max-width: 750px;
-    display: flex;
-}
-
-.image .mobileImg{
-    display: none;
-}
-
-.image{
-    flex-basis: 40%;
-}
-
-.image img{
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 10px 0 0 10px;
-}
-
-/* image @media query */
-
-@media screen and (max-width: 375px){
-    #showcase{
-        display: flex;
-        flex-direction: column;
-        margin: 20px;
-    }
-
-    .image .desktopImg{
-        display: none;
-    }
-
-    .image .mobileImg{
-        display: block;
-        block-size: 47%;
-        border-radius: 10px 10px 0 0;
-    }
-}
-
-
-
-/* texts code */
-
-.texts{
-    flex-basis: 45%;
-    background: var(--White);
-    padding: 40px;
-}
-
-.texts h3{
-    letter-spacing: 5px;
-    color: var(--Dark-grayish-blue);
-    font-family: var(--montserrat);
-    font-weight: 300;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-
-.texts h1{
-    font-size: 2rem;
-    font-family: var(--fraunces);
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-
-.texts h4{
-    font-size: 15px;
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-
-.price{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    font-family: var(--fraunces);
-    margin-top: 10px;
-    margin-bottom: 30px;
-    /* background: var(--Dark-cyan); */
-}
-
-.price h2{
-    font-size: 2rem;
-    font-family: var(--fraunces);
-    font-weight: 700;
-    color: var(--Dark-cyan);
-}
-
-#btn{
-    background: var(--Dark-cyan);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 20px;
-    color: var(--White);
-    font-family: var(--montserrat);
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.btn{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    
-}
-
-#btn:hover{
-    background: var(--btnHover);
-}
-
-/* texts @media query */
-
-@media screen and (max-width: 375px){
-    .texts{
-        padding: 15px;
-    }
-
-    .texts h3{
-        margin-bottom: 5px;
-    }
-}
-</style>
-
 
 <body>
     <div id="container">
