--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product View Card || Frontend Mentor</title>
-    <link rel="stylesheet" href="/product-preview-card-component-main/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div id="container">
         <div id="showcase">
             <div class="image">
-                <img src="/product-preview-card-component-main/jpegs/image-product-desktop.jpg" class="desktopImg" alt="Product image">
-                <img src="/product-preview-card-component-main/jpegs/image-product-mobile.jpg" class="mobileImg" alt="">
+                <img src="./image-product-desktop.jpg" class="desktopImg" alt="Product Image">
+                <img src="./image-product-mobile.jpg" class="mobileImg" alt="Product Image">
             </div>
 
             <div class="texts">
@@ -30,7 +30,7 @@
                 
                 <a href="#" id="btn">
                     <div class="btn">
-                        <img src="./product-preview-card-component-main/images/icon-cart.svg" alt="">
+                        <img src="/product-preview-card-component-main/design/icon-cart.svg" alt="">
                         &nbsp;&nbsp;&nbsp;Add to Cart
                     </div>
                 </a>
