--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 
                 <a href="#" id="btn">
                     <div class="btn">
-                        <img src="/product-preview-card-component-main/design/icon-cart.svg" alt="">
+                        <img src="./design/icon-cart.svg" alt="">
                         &nbsp;&nbsp;&nbsp;Add to Cart
                     </div>
                 </a>
